# pak

./: .env.example  .gitignore  CITATION.cff  README.md  REPRODUCIBILITY.md  pyproject.toml
data/eval/: human_scores_260520.csv  human_scores_260520_amendments_260521.csv
data/grounding/: T1.parquet  T10.parquet  T10_provenance.json  T11.parquet  T11_provenance.json  T12.parquet  T12_provenance.json  T13.parquet  T13_provenance.json  T14.parquet  T14_provenance.json  T15.parquet  T15_provenance.json  T1_provenance.json  T2.parquet  T2_provenance.json  T3.parquet  T3_provenance.json  T4.parquet  T4_provenance.json  T5.parquet  T5_provenance.json  T6.parquet  T6_provenance.json  T7.parquet  T7_provenance.json  T8.parquet  T8_provenance.json  T9.parquet  T9_provenance.json  joint_distributions.parquet  sampler_specs.json
data/grounding/marginals/: field_marginal_crosscheck.parquet  field_marginal_summary.json
data/prompts/: schema.json
data/prompts/_common/: arts_persona.j2  career_goals_and_ambitions.j2  culinary_persona.j2  cultural_background.j2  family_persona.j2  hobbies_and_interests.j2  hobbies_and_interests_list.j2  persona.j2  sports_persona.j2  (+3 more)
outputs/pak_1k_eval_release/: DATA_CARD.md  LICENSE  MANIFEST.sha256  README.md  calibration_anchors.csv  metadata.json  preregistration.md  schema.json
scripts/: analyze_human_llm_relationship.py  compute_pak1k_paper_tables.py  consolidate_annotations.py  diversity_analysis.py  holdout_t8_validation.py  judge_human_agreement.py  package_release.py  prepare_eval_judge_release.py  qwen3_self_preference.py  run_downstream_bge.py  run_downstream_bge_bootstrap.py  run_downstream_extended_tasks.py  run_downstream_persona_tasks.py  run_qwen3_judge.py  verify_release.py
src/pak/: __init__.py  columns.py  config.py  config_dataset.py  generate.py  llm_client.py  preview.py  prompt_builder.py  prompt_validator.py  prompts_data.py  samplers.py  schema.py
tests/: __init__.py  test_dataset_config.py  test_generate.py  test_grounding.py  test_ipf.py  test_post_check.py  test_preview.py  test_prompts.py  test_schema.py  test_validators.py
(+108 files in other folders)
